--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
-    background-color: #d7d7d7;
-    font-family: "Poppins", sans-serif;
+    background-color: #ECEFF2;
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -10,7 +10,7 @@ nav {
     background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-between;
-    padding: 16px 20px;
+    padding: 16px 140px;
 }
 
 .login_btn {
@@ -22,4 +22,17 @@ nav {
     padding: 5px 10px;
     font-size: 16px;
     font-weight: 600;
+}
+
+.hero {
+    text-align: center;
+}
+
+.hero h1 {
+    font-size: 40px;
+}
+
+.hero p {
+    color: gray;
+    font-weight: 500;
 }
