--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,15 +24,42 @@ nav {
     font-weight: 600;
 }
 
-.hero {
+.hero_section {
     text-align: center;
+    padding: 30px 0;
 }
 
-.hero h1 {
+.hero_section h1 {
     font-size: 40px;
 }
 
-.hero p {
+.hero_section p {
     color: gray;
     font-weight: 500;
+}
+
+.blog {
+    padding: 10px 100px;
+    display: grid;
+    grid-template-columns: 0.80fr 0.25fr;
+    column-gap: 20px;
+
+}
+
+.first_half,
+.second_half {
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 2px 20px;
+}
+
+.first_half {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and (max-width:500px) {
+    .blog {
+        display: none;
+    }
 }
