--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@ nav {
     background-color: #fff;
     border-radius: 20px;
     padding: 2px 20px;
+    box-shadow: 0px 3px 10px rgb(194, 194, 194);
 }
 
 .first_half {
