--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ nav {
     display: flex;
 }
 
-.first_card_image {
+/* .first_card_image {
     width: 30%;
 }
 
@@ -86,6 +86,24 @@ nav {
     width: 100%;
     padding: 13px 3px 9px 0px;
     border-radius: 12%;
+} */
+
+
+.first_card_image {
+    width: 30%;
+    overflow: hidden;
+    /* Ensure border-radius applies correctly */
+    border-radius: 12px;
+    /* Change to fixed value */
+    padding: 10px 0;
+}
+
+.first_card_image img {
+    width: 100%;
+    height: auto;
+    /* Maintain aspect ratio */
+    border-radius: 12px;
+    /* Match the container border-radius */
 }
 
 
