--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,8 +109,16 @@ nav {
     /* Match the container border-radius */
 }
 
-
 .first_card_text {
     width: 70%;
     padding: 10px;
+}
+
+.author_signature p {
+    margin-bottom: -10px;
+}
+
+[href='#'] {
+    text-decoration: none;
+    color: black;
 }
