--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,10 @@ nav {
     color: black;
 }
 
+[href='#']:hover {
+    text-decoration: underline;
+}
+
 .card1,
 .card2,
 .card3,
@@ -136,4 +140,15 @@ nav {
 .card4 h4,
 .card5 h4 {
     margin-bottom: -10px;
+}
+
+.special_text_effect {
+    color: #ff1087;
+    background-color: #fed0e7;
+    padding: 5px 7px;
+    border-radius: 3px;
+}
+
+.first_card_text p {
+    font-size: 13px;
 }
