--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,7 @@ nav {
     background-color: #fed0e7;
     padding: 5px 7px;
     border-radius: 3px;
+    margin-right: 5px;
 }
 
 .first_card_text p {
